# Softwareudvikling-PortefoljeOpgave

./: .gitignore  AsciiPrinter.cpp  AsciiPrinter.h  CMakeLists.txt  Character.cpp  Character.h  LICENSE  Monster.cpp  Monster.h  README.md  References.md  init_database.txt  main  main.cpp
AsciiArt/: -listOfMonsters  Bat.txt  Bee.txt  Cat.txt  Cockroach.txt  Cow.txt  Deer.txt  Dragon.txt  Duckling.txt  Elephant.txt  Fish.txt  Frog.txt  Mouse.txt  Owl.txt  Penguin.txt  Porcupine.txt  Porqupine.txt  Rabbit.txt  Spider.txt  Squirrel.txt  Worm.txt
include/: AsciiPrinter.h  CaveFactory.h  Character.h  Database.h  Item.h  Monster.h
src/: AsciiPrinter.cpp  AsciiPrinter.h  CaveFactory.cpp  CaveFactory.h  Character.cpp  Character.h  Database.cpp  Item.cpp  Monster.cpp  main.cpp
